# icicle-snark-mina

./: .gitignore  Cargo.toml  README.md  clean.sh  run_poly_eval_pipeline.sh
example_circuit/: README.md  proof.json  public.json  verification_key.json
icicle-snark/: .gitignore
icicle-snark/benchmark/poly_eval/: circuit.circom  input.json
icicle-snark/benchmark/sum_check/: circuit.circom  input.json
icicle-snark/examples/rust/: Cargo.toml
icicle-snark/examples/rust/src/: main.rs
o1js-blobstream/: convert_icicle_to_o1js_groth16.js
o1js-blobstream/contracts/src/poly_eval_zkapp/: poly_eval_verifier.ts  run.ts
o1js-blobstream/converted_circuit/: proof.json  vk.json
o1js-blobstream/scripts/: env.groth16-example  env.poly_eval  env.sum_check  get_aux_witness_groth16.sh  groth16_tree.sh
o1js-blobstream/sum_check/e2e_groth16/: mlo.json
src/: main.rs
