[package]
name = "snarkjs_to_o1jsblobstream"
version = "0.1.0"
edition = "2021"
authors = ["0x471 <0x471@protonmail.com>"]
homepage = "https://github.com/o1-labs/icicle-snark-mina-15-07"
repository = "https://github.com/o1-labs/icicle-snark-mina-15-07"

[dependencies]
ark-bls12-377 = "0.4"
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-bw6-761 = "0.4"
ark-std = "0.4"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2" 